# Glide

./: .clangd  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  LANGUAGE.md  README.md  SECURITY.md  TESTING.md  TUTORIAL.md  glide.glide
bench/: BASELINE_PRE_SM1.md  REFERENCE_BASELINE.md  RESULTS.md  build_quic_stack.sh  chan_i64.glide  http2_smoke.glide  http3_pingpong.glide  http3_probe.glide  http3_smoke.glide  http_blocking_abort.glide  http_extractors_smoke.glide  http_hello_handler.glide  http_hello_multi.glide  http_hello_single.glide  http_macro_smoke.glide  http_router_bench.glide  http_sm_handler.glide  http_sm_hello.glide  http_writev.glide  leaf_footprint.glide  log_macros_smoke.glide  log_smoke.glide  massive_concurrency.glide  massive_concurrency_go.go  park_unpark.glide  park_unpark_coro.glide  park_unpark_coro_clean.glide  park_unpark_coro_clean_go.go  regex_full.glide  regex_smoke.glide  run_concurrency.sh  run_http_compare.sh  spawn_1m.glide  spawn_1m.go  spawn_pure.glide  spawn_pure.go  throughput_glide.glide
bench/rust/: Cargo.toml  axum_hello.rs  massive_concurrency.rs  park_unpark_coro_clean.rs  spawn_1m.rs
bootstrap/: README.md  ast.glide  codegen.glide  doc.glide  expander.glide  fetch.glide  fmt.glide  interp.glide  json.glide  lexer.glide  loader.glide  lower.glide  lsp.glide  main.glide  manifest.glide  openapi.glide  parser.glide  semver.glide  typer.glide
docs/: net-upgrade-plan.md
examples/: data_pipeline.glide  text_extract.glide  todo_api.glide  tour.glide  tuples.glide  users_api.glide  (+1 more)
(+422 files in other folders)
