[package]
name = "glide-bench-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[[bin]]
name = "park_unpark_coro_clean"
path = "park_unpark_coro_clean.rs"

[[bin]]
name = "massive_concurrency"
path = "massive_concurrency.rs"

[[bin]]
name = "spawn_1m"
path = "spawn_1m.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
